@@ -134,3 +134,5 @@ Backward compatibile changes:
  ZOOKEEPER-127.  Use of non-standard election ports in config breaks services
  (Mark Harwood and Flavio Junqueira via breed)
 
+ ZOOKEEPER-172. FLE Test (Flavio Junqueira via breed)
+
